src/app/pages/wallet/wallet.component.scss
.page-container{
    padding:1.5rem;
}
.page-heading{
    font-weight: 500;
}
.bg-white{
    background-color: white;
}
.custom-tab{
    width: 240px;
    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
    transition: 0.3s;
    margin-bottom: 2rem;
    border-right: 4px solid transparent;
    padding:1.4rem 1rem;
    opacity: .5;
}
.activeTab{
    border-right: 4px solid #a63da1;
    opacity: 1;
}
.tab-amount{
    font-weight: 600;
    font-size: 32px;
    margin-right: 4px;
}
.pointDiv{
    padding-left:2rem;
    padding-right: 1rem;
    text-transform: uppercase;
}
hr{
    margin-top:4px;
}
.shadow{
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    transition: 0.3s;
}
.mat-form-field{
    width: 140px !important;
    background-color: white;
    margin:4px
}
@media only screen and (min-device-width: 768px){
    .page-container{
        padding: 1.5rem 4rem;
    }
}

